--- a/SOP.html
+++ b/SOP.html
@@ -21,7 +21,7 @@
             <li><a href="https://public.cyber.mil/stigs/" target="_blank">STIG Resources</a></li>
         </ul>
         <div class="footer">
-            <a href="https://github.com/judsenb/PRTR-MFD-STIG-SOP/tree/main" target="_blank">Created by SrA Barnes</a>
+            <a href="https://github.com/judsenb" target="_blank">Created by SrA Barnes</a>
         </div>
     </div>
 
